<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/xnotice"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/xedit"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/ynotice"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/yedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/startwindow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startFloatingService"
        android:text="@string/startwindow"
        android:textSize="18sp" />

    <Button
        android:id="@+id/stopwindow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="stopFloatService"
        android:text="@string/stopwindow"
        android:textSize="18sp" />

    <Button
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="helpinfo"
        android:text="@string/help"
        android:textSize="18sp" />

</LinearLayout>